# cudadb

./: cudadb.yaml
Debug/: cudadb  makefile  objects.mk
Debug/src/: CudaDB.d  DB.d  subdir.mk
core/: io.cpp  mog.h
mog_client/: .cproject  client  main.cpp  mog.h
mog_gpu/: GpuCache.cpp  GpuCache.h  main.cpp  mog_GPU.cu  mog_gpu.cpp  mog_gpu.h
mog_server/: compile.sh  mog.yaml  notes.txt
mog_server/src/: CMakeLists.txt  CentraIndex.cpp  CentraIndex.h  CpuCache.cpp  CpuCache.h  MappedFile.cpp  MappedFile.h  SSDCache.cpp  SSDCache.h  WriteBuffer.cpp  WriteBuffer.h  main.cpp  main.cpp.old  main.h  main2.cpp.old  mog.cpp  mog.h
new/cudadb/: .cproject  .project  CMakeLists.txt
new/cudadb/client/: client  client.cpp  client.cpp~
new/cudadb/src/: .compile.sh.swp  CMakeLists.txt  CentraIndex.cpp  CentraIndex.h  CpuCache.h  SSDCache.cpp  SSDCache.h  WriteBuffer.cpp  WriteBuffer.h  compile.sh  main.cpp  mog.cpp  mog.h  mog.yaml
new/mog_client/: .project  mog.h
new/mog_gpu/: .cproject  .project  GpuCache.cpp  GpuCache.h  compile.sh  main  main.cpp  mog_GPU.cu  mog_gpu.cpp  mog_gpu.h
src/: CentraIndex.cpp  CentraIndex.h  CpuCache.cpp  CpuCache.h  CudaDB.cpp  CudaDB.h  DB.cpp  DB.h  DB_GPU.cu  GpuCache.cpp  GpuCache.h  MappedFile.cpp  MappedFile.h  SSDCache.cpp  SSDCache.h  WriteBuffer.cpp  WriteBuffer.h  compile.sh  cudadb.yaml  main  main.cpp  main.h  mog.cpp  mog.h  mog.yaml  mog.yaml~  mog_GPU.cu
src/dfs/: 3  4  5
src/dfs/www.mog/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
src/include/yaml-cpp/: .binary.h.swp
src/ssd/www.mog/: LOG
